# Sentinelx

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: loader.py  logging.py
database/: client.py  indexes.py  models.py
docs/: architecture.md  devlog.md
docs/adr/: 001-python-stack.md
