[project]
name = "sentinelx"
version = "0.1.0"
description = "Open-source Blue Team Detection & Threat Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "ansh" }
]
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.4.0",
    "isort>=5.13.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.isort]
profile = "black"
line_length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinelx*"]
exclude = ["venv*", "tests*"]